<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExhibitListViewActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/exhibits"
        android:layout_width="410dp"
        android:layout_height="520dp"
        android:layout_marginTop="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="1dp" />

    <TextView
        android:id="@+id/count"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:gravity="center_vertical"
        android:text="Count: "
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/return_button"
        android:layout_width="68dp"
        android:layout_height="40dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="12dp"
        android:onClick="onGoBackClicked"
        android:text="Back"
        android:textColor="#FFFFFF"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name"
        android:layout_width="125dp"
        android:layout_height="40dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical|center"
        android:text="Exhibit List"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/count"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/return_button"
        app:layout_constraintTop_toTopOf="parent" />

    <Button

        android:id="@+id/plan_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="28dp"
        android:onClick="onPlanRouteClicked"
        android:text="Plan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/cur_location"
        android:layout_width="179dp"
        android:layout_height="64dp"
        android:layout_marginEnd="104dp"
        android:layout_marginBottom="16dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="87dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="32dp"
        android:onClick="clearAll"
        android:text="Clear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cur_location"
        app:layout_constraintHorizontal_bias="0.266"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/is_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Detail Description"
        android:onClick="onCheckboxClicked"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.059"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.863" />


</androidx.constraintlayout.widget.ConstraintLayout>