<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlanRouteActivity">

    <TextView
        android:id="@+id/plan_nav_title"
        android:layout_width="343dp"
        android:layout_height="44dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="Plan Route"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/plan_from"
        android:layout_width="130dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/alata"
        android:gravity="center"
        android:hint="From"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plan_nav_title" />

    <TextView
        android:id="@+id/plan_to"
        android:layout_width="130dp"
        android:layout_height="45dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/alata"
        android:gravity="center"
        android:hint="To"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plan_nav_title" />

    <TextView
        android:id="@+id/arrow"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="156dp"
        android:layout_marginTop="27dp"
        android:background="@drawable/arrow"
        app:layout_constraintEnd_toEndOf="@+id/plan_nav_title"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/plan_nav_title"
        app:layout_constraintTop_toBottomOf="@+id/plan_nav_title" />


    <Button
        android:id="@+id/button"
        android:layout_width="82dp"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:onClick="onGoBackClicked"
        android:text="Go Back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/next_in_list"
        android:layout_width="80dp"
        android:layout_height="64dp"
        android:layout_marginEnd="110dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/ic_action_next"
        android:onClick="onNextClicked"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/prev_in_list"
        android:layout_width="80dp"
        android:layout_height="64dp"
        android:layout_marginStart="110dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/ic_action_pre"
        android:onClick="onPrevClicked"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/plan_nav"
        android:layout_width="340dp"
        android:layout_height="300dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="132dp"
        android:fontFamily="@font/alata"
        android:lineSpacingExtra="8sp"
        android:scrollbars="vertical"
        android:text="You've already arrived at your destination!"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="395dp"
        android:layout_height="91dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="96dp"
        android:background="@drawable/customborder"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/nextStop"
            android:layout_width="229dp"
            android:layout_height="62dp"
            android:fontFamily="@font/alata"
            android:gravity="center_vertical"
            android:text=" "
            android:textSize="16sp" />


    </LinearLayout>

    <Button
        android:id="@+id/skip_exhibit"
        android:layout_width="84dp"
        android:layout_height="52dp"
        android:layout_marginStart="270dp"
        android:layout_marginBottom="115dp"
        android:onClick="onSkipClicked"
        android:text="Skip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/num_remaining"
        android:layout_width="365dp"
        android:layout_height="63dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/alata"
        android:gravity="center_vertical"
        android:text=" "
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plan_nav" />

    <Button
        android:id="@+id/MockLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:text="Input"
        android:onClick="onMockLocation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>